# LLMBotFPS

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: build.yml
llm/: README.md
src/: AimModel.h  Analyst.cpp  Analyst.h  BotController.cpp  BotController.h  Combat.h  Config.cpp  Config.h  Entity.h  Game.cpp  Game.h  LLMService.cpp  LLMService.h  Log.cpp  Log.h  Map.cpp  Map.h  Math.h  PlayerModel.h  Projectile.h  Rng.h  Rollout.cpp  Rollout.h  RoundSummary.h  Strategy.h  StrategyTuner.cpp  StrategyTuner.h  Telemetry.h  Weapon.h  main.cpp
tools/: fetch_llm.ps1  sim_test.cpp
